# SmartFlow

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  database.py  main.py  models.py  schemas.py  utils.py
app/routers/: auth.py  transactions.py
data/: smartflow.db
